examples/pv/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-pv-1-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: server-pv-1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: server-pv-2-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: server-pv-2
  type: ClusterIP
